# hello_omni

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_main.py
